style: fix image cropping by removing fixed height and aspect-ratio on overview images

--- a/about.css
+++ b/about.css
@@ -209,7 +209,6 @@
     width: 100%;
     height: auto;
     display: block;
-    aspect-ratio: 4/5;
     object-fit: cover;
 }
 
