--- a/index.css
+++ b/index.css
@@ -433,7 +433,7 @@
 
 .overview-image-wrapper img {
     width: 100%;
-    height: 520px;
+    height: auto;
     object-fit: cover;
     display: block;
     transition: transform 0.6s ease;
